# weather_mcp_server

./: pyproject.toml
src/weather/: server.py
