[project]
name = "weather"
version = "0.1.0"
description = "Weather MCP server for accessing weather data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weather = "weather:main"

